--- a/coop/cvec/smartins_f101.html
+++ b/coop/cvec/smartins_f101.html
@@ -23,20 +23,20 @@ var map = new mapboxgl.Map({
     center: [-78.9,37.875]  
 });
 
-var cable_url = 'mapbox://feomike.5c7vgi05' 
-var cable_source_layer = 'mb_smartins_f1_01_cable-a54zyx' 
+var cable_url = 'mapbox://feomike.6sa5l0ck' 
+var cable_source_layer = 'mb_smartins_f1_01_cable-d78ogx' 
 
-var consumers_url = 'mapbox://feomike.7awoelvv'
-var consumers_source_layer = 'mb_smartins_f1_01_consumers-du5ido'
+var consumers_url = 'mapbox://feomike.3omrsr7u'
+var consumers_source_layer = 'mb_smartins_f1_01_consumers-c92828'
 
-var splice_can_url = 'mapbox://feomike.a5f3pahw'
-var splice_can_source_layer = 'mb_smartins_f1_01_splice_can-7vzdqf'
+var splice_can_url = 'mapbox://feomike.9lhapo2y'
+var splice_can_source_layer = 'mb_smartins_f1_01_splice_can-2y3r35'
 
-var substat_url = 'mapbox://feomike.8r1hacw6'
-var substat_source_layer = 'mb_smartins_f1_01_substations-1n4p7n'  
+var substat_url = 'mapbox://feomike.7akby4in'
+var substat_source_layer = 'mb_smartins_f1_01_substations-27m217'  
 
-var tap_url = 'mapbox://feomike.385hvla2' 
-var tap_source_layer = 'mb_smartins_f1_01_tap_geo-db228e' 
+var tap_url = 'mapbox://feomike.1nam6xvi' 
+var tap_source_layer = 'mb_smartins_f1_01_tap_geo-9ym2gm' 
 
 var myBlue = '#0000FF'
 var myOrange = '#FFA500'
