--- a/coop/arc_valley/sroland_f1_2.html
+++ b/coop/arc_valley/sroland_f1_2.html
@@ -29,8 +29,8 @@ var cable_source_layer = 'mb_s1_f2_cable-dhn86a'
 var consumers_url = 'mapbox://feomike.2tpsy05r'
 var consumers_source_layer = 'mb_s1_f2_consumers-5y5ryl'
 
-var splice_can_url = 'mapbox://feomike.2tpsy05r'//repeated b/c it is empty
-var splice_can_source_layer = 'mb_s1_f2_consumers-5y5ryl'//repeated b/c it is empty
+var splice_can_url = 'mapbox://feomike.6phrnk4o'//repeated b/c it is empty
+var splice_can_source_layer = 'mb_s1_f2_tap_geo-5a54mq'//repeated b/c it is empty
 
 var substat_url = 'mapbox://feomike.6uwbvypr'
 var substat_source_layer = 'mb_s1_f2_substations-blwgr6'  
